:bug: [kmp/sys] 修复桌面端版本号读取异常